--- a/body/ML/basic.tex
+++ b/body/ML/basic.tex
@@ -276,7 +276,7 @@ ROC是一个曲线，那怎么作为一个指标呢？ --- 取ROC与坐标轴围
 AUC的含义：随机挑选一个正样本、一个负样本，分类器分别给出一个分数，正样本的分数大于负样本的分数的概率。\tbc{red}{强烈推荐}-相关证明：\href{http://vividfree.github.io/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0/2015/11/20/understanding-ROC-and-AUC}{\tbc{red}{理解 ROC 和 AUC}}。
 
 \textbf{为什么要用ROC/AUC呢？}\newline
-因为ROC曲线有个很好的特性：当测试集中的正负样本的分布变化的时候，ROC曲线能够保持不变。在实际的数据集中经常会出现类不平衡(class imbalance)现象，即负样本比正样本多很多(或者相反)，而且测试数据中的正负样本的分布也可能随着时间变化。roc曲线不变原因：TPR和FPR是实际label内部的操作，看混淆矩阵和tpr、fpr计算公式，无论实际label比例怎么变化，tpr、fpr计算公式都是在实际为p或者n的内部计算的。AUC 关注的是样本间的排序效果。
+因为ROC曲线有个很好的特性：当测试集中的正负样本的分布变化的时候，ROC曲线能够保持不变。在实际的数据集中经常会出现类不平衡(class imbalance)现象，即负样本比正样本多很多(或者相反)，而且测试数据中的正负样本的分布也可能随着时间变化。roc曲线不变原因：TPR和FPR是实际label内部的操作，看混淆矩阵和tpr、fpr计算公式，无论实际label比例怎么变化，tpr、fpr计算公式都是在实际为p或者n的内部计算的。AUC 关注的是样本间的排序效果。AUC 对正负样本比例的不敏感性：\href{https://blog.csdn.net/Leon_winter/article/details/104673047}{AUC：直观理解AUC为何会对正负样本数分布不均匀情况鲁棒}。
 
 \textbf{如何使用ROC来选择模型？}\newline
 当我们有多个分类器时，给定一个数据集，可以得到多条ROC曲线，那么怎么来选择模型呢？一个很直观的想法是直接比较AUC。但是在不同场景下，我们要结合更看重的指标选择模型。如Fig.\ref{fig:roc-cmp}所示，当ROC不交叉时，可以直接选择AUC高的，当ROC交叉时则需要慎重考虑了。当需要高的Sensitiviy时，选择A，需要高Specificity（即低FPR）时选择B。
@@ -615,9 +615,20 @@ $$
 
 \subsection{类别变量的编码方法}
 \subsubsection{one-hot}
-这个就很简单了，将一个类别变量展开成一个向量，向量的长度等于类别变量的基数。
+这个就很简单了，将一个类别变量展开成一个向量，向量的长度等于类别变量的基数。经过独热编码后，一个类别变量变成了一个向量，很明显这增加了数据的维度，而且编码后的数据是很稀疏的。
 
 \subsubsection{目标编码}
+Target Encoder 是一种有监督的编码方式，适用于分类和回归问题，主要针对定类变量。考虑分类问题。假设在分类问题中，目标 $y$  一共有 $C$ 个类别，具体的一个类别用 $c$ 表示，为了简化讨论，当前考虑一个 $c$。同时假设某一个定性特征 $f$ 中一共有 $K$ 个不同的类别，具体的一个类别用 $k$ 表示。针对一个目标 $c$，目标编码将 $f$ 转化为一个后验概率 $P(y = c | f=k)$。因此，一个 $C$ 个类别的任务，可以将 $f$ 转化成 $C-1$ 个特征，每个特征针对一个目标进行编码。即 $P(y=c_i | f=k), i=1, ..., C-1$。
+
+但是这样的做法有一个问题，经过目标编码后的特征与目标有很强的相关性，容易发生过拟合。可以对目标编码进行平滑：
+$$
+P = (1-\lambda) \cdot P(y = c) + \lambda \cdot P(y=c | f=k)
+$$
+一个特征类别在训练集内出现的次数越多，其后验概率的可信度越高，所以其权重也应该适当增大，即此时 $\lambda$ 应该越大；相反，如果当一个特征类别在训练集内出现的次数较少的时候，其后验概率的可信度较低，所以我们应该让正则项更强一些，即应该减小 $\lambda$。那 $\lambda$ 应该如何取值呢？$\lambda$ 应该是一个关于某个特征类别在训练集中出现的次数 $n$ 的函数，输出是对于这个特征类别的先验概率的权重的函数。一种常用的计算方式：
+$$
+\lambda (n) = \frac{1}{1+e^{-\frac{n-\beta}{\alpha}}}
+$$
+其中引入了两个参数 $\alpha, \beta$。很明显，当 $n > \beta$ 时 $\lambda > 0.5$，即后验概率占比更大，反之亦然。$\alpha$ 用于控制拐点处的斜率，越小，斜率越大。 
 
 \subsubsection{贝叶斯目标编码}
 
@@ -633,3 +644,24 @@ $$
 MSE 作为损失函数是非凸的，不容易求解，容易得到局部最优解；而交叉熵损失函数是凸函数。
 
 MSE 求导后，梯度与 sigmoid 的导数有关，容易落在 sigmoid 的平坦区，导致梯度很小，引发梯度消失问题；交叉熵求导后梯度为残差，误差越大更新越快，误差越小更新越慢。
+
+\subsection{为什么要将连续特征离散化后输入到线性模型中？}
+连续值经常离散化或者分离成 “箱子” 进行分析, 为什么要做数据分桶呢？
+\begin{itemize}
+	\item 离散后稀疏向量内积乘法运算速度更快，计算结果也方便存储，容易扩展；
+	
+	\item 离散后的特征对异常值更具鲁棒性，如 age>30 为 1 否则为 0，对于年龄为 200 的也不会对模型造成很大的干扰；
+	
+	\item LR 属于广义线性模型，表达能力有限，经过离散化后，每个变量有单独的权重，这相当于引入了非线性，能够提升模型的表达能力，加大拟合；
+	
+	\item 离散后特征可以进行特征交叉，提升表达能力，由 M+N 个变量编程 M*N 个变量，进一步引入非线形，提升了表达能力；
+	
+	\item 特征离散后模型更稳定，如用户年龄区间，不会因为用户年龄长了一岁就变化；
+	
+	\item 特征离散化以后，起到了简化了逻辑回归模型的作用，降低了模型过拟合的风险；
+\end{itemize}
+
+
+
+
+
