--- a/body/ML/classic.tex
+++ b/body/ML/classic.tex
@@ -534,3 +534,6 @@ $$
 \end{itemize}
 
 \subsection{SMOTE}
+SMOTE(Synthetic Minority Over-Sampling Technique) 是一种综合采样人工合成数据算法，用于解决数据类别不平衡问题，以 Over-sampling 少数类和 Under-sampling 多数类结合的方式来合成数据。
+
+SMOTE 以每个样本点的 k 个最近邻样本点为依据，随机的选择 N 个邻近点，样本点与邻近点进行差值再乘上一个 [0,1] 范围的阈值，从而达到合成数据的目的。这种算法的核心是：特征空间上邻近的点其特征都是相似的。它并不是在数据空间上进行采样，而是在特征空间中进行采样，所以它的准确率会高于传统的采样方式。这也是为什么到目前为止 SMOTE 以及其派生的算法仍然是较为主流的采样技术的原因。
