--- a/body/Math/chap01.tex
+++ b/body/Math/chap01.tex
@@ -349,3 +349,6 @@ $$
 当然，对于不同的变量类型，有不同得检验方法，具体可以参见：\href{https://zhuanlan.zhihu.com/p/396580986}{相关分析最全总结}、\href{https://zhuanlan.zhihu.com/p/94070722}{要做相关性分析，该如何选择正确的统计方法？}。
 
 \subsection{Jacobean Hessian}
+
+\subsection{指数移动平均}
+指数移动平均在深度学习的梯度下降优化算法中出现的频率很高。
