--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,8 @@
 \usepackage[minted]{tcolorbox}
 \tcbuselibrary{skins, listings, xparse, breakable,listings}
 
+\usepackage{pgfplots}  % 一个可视化包，简化在文档中画图的过程。用户提供输入数据/公式，然后 pgfplots宏包会帮助用户绘制图像
+
 \usepackage{pythonhighlight}
 \usepackage{cpphighlight}
 \usepackage{pdfpages}  
@@ -178,8 +180,8 @@
 \section{基础}
 \input{body/nlp/basic}
 
-\section{经典算法}
-\input{body/nlp/classic}
+%\section{经典算法}
+%\input{body/nlp/classic}
 
 
 \clearpage
