--- a/references.bib
+++ b/references.bib
@@ -313,3 +313,10 @@ url={https://openreview.net/forum?id=ryGs6iA5Km},
 	author={Junqiu, Wei and Xiaozhe, Ren and Xiaoguang, Li and Wenyong, Huang and Yi, Liao and Yasheng, Wang and Jiashu, Lin and Xin, Jiang and Xiao, Chen and Qun, Liu},
 	year={2019}
 }
+
+@article{kingma2015adam,
+	title={Adam: A Method for Stochastic Optimization},
+	author={Kingma, P. Diederik and Ba, Lei Jimmy},
+	journal={international conference on learning representations},
+	year={2015}
+}
