--- a/main.tex
+++ b/main.tex
@@ -180,8 +180,8 @@
 \section{基础}
 \input{body/nlp/basic}
 
-%\section{经典算法}
-%\input{body/nlp/classic}
+\section{经典算法}
+\input{body/nlp/classic}
 
 
 \clearpage
