--- a/main.tex
+++ b/main.tex
@@ -193,6 +193,9 @@
 \section{经典算法}
 \input{body/recsys/classic}
 
+\section{用户兴趣建模}
+\input{body/recsys/interest}
+
 
 \clearpage
 \part{Information Retrieval}
@@ -225,6 +228,9 @@
 
 \section{Pytorch}
 \input{body/coding/pytorch}
+
+\section{Shell}
+\input{body/coding/shell}
 
 \section{ML/DL错误集锦}
 \input{body/coding/lessons}
