--- a/body/ML/rank.tex
+++ b/body/ML/rank.tex
@@ -23,3 +23,6 @@ Pairwise缺点：
 
 \subsubsection{Listwise}
 Listwise将一个query对应的所有相关待查询对象看作一个整体, 作为单个训练样本, 直接优化MAP、NDCG（Normalized Discounted Cumulative Gain）这样的指标, 从而学习到最佳排序结果. 
+
+
+\subsection{LambdaMart}
