--- a/body/Math/chap01.tex
+++ b/body/Math/chap01.tex
@@ -26,7 +26,7 @@ E_{x \sim p(x)}[f(x)] = \int p(x) f(x) d x \approx \frac{1}{n} \sum_{i} f(x_{i})
 $$
 然而通常数据分布会比较复杂且积分也是一个复杂的过程，因此会用采样来代替之。上式中的第三项就是用采样来代替积分，其中$\frac{1}{n}$表示$p(x) = \frac{1}{n}$，即数据的分布。但是有时候$p(x)$是个很复杂的分布，从其重采样是很困难的，这个时候该怎么办呢？
 
-找一个已易于采样的分布$q(x)$，如正态分布，从$q(x)$中采样得到的很多样本作为从$p(x)$中采样的样本集，那么问题就来了，这俩又不是同一个分布，$q(x)$中采样的样本集分布符合$p(x)$吗？先看一个公式：
+找一个易于采样的分布$q(x)$，如正态分布，从$q(x)$中采样得到的很多样本作为从$p(x)$中采样的样本集，那么问题就来了，这俩又不是同一个分布，$q(x)$中采样的样本集分布符合$p(x)$吗？先看一个公式：
 $$
 E_{x \sim p(x)}[f(x)] = \int q(x) \frac{p(x)}{q(x)} f(x) d x \approx \frac{1}{n} \sum_{i}  \frac{p(x)}{q(x)} f(x_{i})
 $$
