--- a/body/recsys/basic.tex
+++ b/body/recsys/basic.tex
@@ -126,11 +126,6 @@ sim(A, B) = \frac{\boldsymbol{V}_A \cdot \boldsymbol{V}_B}{||\boldsymbol{V}_A||_
 $$
 
 
-
-
-
-
-
 \subsection{推荐中要注意的点}
 \begin{myitemize}
 	\item 长尾效应：位于长尾位置的曝光率低的项目产生的利润不低于只销售曝光率高的项目的利润。注意对长尾物品的推荐效果，热门物品的推荐较长尾物品更容易，在评价算法效果时要注意对长尾物品的推荐效果
@@ -159,3 +154,5 @@ $$
 \subsection{用户画像}
 
 \subsection{电商推荐}
+
+\subsection{用户冷启动的解决办法}
