--- a/main.tex
+++ b/main.tex
@@ -196,6 +196,9 @@
 \section{用户兴趣建模}
 \input{body/recsys/interest}
 
+\section{多任务学习}
+\input{body/recsys/mtl}
+
 
 \clearpage
 \part{Information Retrieval}
