--- a/references.bib
+++ b/references.bib
@@ -320,3 +320,16 @@ url={https://openreview.net/forum?id=ryGs6iA5Km},
 	journal={international conference on learning representations},
 	year={2015}
 }
+
+@inproceedings{guo_nips_2017,
+	author    = {Guolin Ke and Qi Meng and Thomas Finley and Taifeng Wang and Wei Chen and	Weidong Ma and Qiwei Ye and	Tie{-}Yan Liu},
+	title     = {LightGBM: {A} Highly Efficient Gradient Boosting Decision Tree},
+	booktitle = {{NeurIPS}, 2017,
+	Long Beach, CA, {USA}},
+	pages     = {3146--3154},
+	year      = {2017},
+	url       = {https://proceedings.neurips.cc/paper/2017/hash/6449f44a102fde848669bdd9eb6b76fa-Abstract.html},
+	timestamp = {Thu, 21 Jan 2021 15:15:21 +0100},
+	biburl    = {https://dblp.org/rec/conf/nips/KeMFWCMYL17.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
