--- a/body/coding/shell.tex
+++ b/body/coding/shell.tex
@@ -142,7 +142,12 @@ shell 中, 用括号表示数组, 元素之间用空格分开, 如: \mintinline{
 \end{myitemize}
 
 参考: \href{https://blog.csdn.net/qq_51470638/article/details/125035162}{SHELL字符串处理技巧}, \href{https://www.cnblogs.com/gaochsh/p/6901809.html}{linux shell 字符串操作详解}.
-	
+
+\subsection{awk}
+早有耳闻 \mintinline{shell}{awk} 的大名, 虽然之前有了解过但是一直觉得很麻烦就没好好学, 导致现在想要用 \mintinline{shell}{awk} 统计文件的列数都不会. 悲哀, 真是悲哀!
+
+\subsubsection{awk 简介}
+
 \subsection{不知道如何分类}
 这里就暂时放一些我不知道该如何分类的知识点吧.
 
