--- a/body/coding/shell.tex
+++ b/body/coding/shell.tex
@@ -148,6 +148,13 @@ shell 中, 用括号表示数组, 元素之间用空格分开, 如: \mintinline{
 
 \subsubsection{awk 简介}
 
+
+\subsection{vim}
+\subsubsection{常用操作}
+\begin{myitemize}
+	\item 跳转到文件尾部: 命令行模式下输入 \mintinline{shell}{$};
+\end{myitemize}
+
 \subsection{不知道如何分类}
 这里就暂时放一些我不知道该如何分类的知识点吧.
 
