--- a/main.tex
+++ b/main.tex
@@ -203,8 +203,10 @@
 \clearpage
 \part{Information Retrieval}
 {\noindent}	 \rule[-10pt]{17.5cm}{0.5em}\\
+\section{Basic}
+\input{body/ir/basic}
 \section{Learning to Rank}
-\input{body/ML/rank}
+\input{body/ir/rank}
 
 
 \clearpage
