--- a/body/recsys/basic.tex
+++ b/body/recsys/basic.tex
@@ -156,3 +156,31 @@ $$
 \subsection{电商推荐}
 
 \subsection{用户冷启动的解决办法}
+
+\subsection{负采样}
+真实场景下, 数据集并不是现成的, 通常是需要我们自己去挖掘, 去构造数据集的. 在构造数据集之前, 通常需要对真实问题建模, 建模之后我们才知道自己需要什么样的数据集. 在推荐系统中, 拿到的原始数据通常是用户的行为数据, 比如用户观看的视频, 点击序列. 或者只有用户的正反馈 (负反馈), 如点赞 (点踩), 分享, 收藏等, 这时候我们只能知道用户喜欢 (不喜欢) 什么. 即我们通常只能拿到正样本或者负样本. 一般而言, 缺乏的是负样本. 其实得到负样本并不难, 根据长尾定律, 用户只会喜欢一小撮东西, 其他的东西大多是负样本, 那负样本的构造还是个问题吗? 负采样的难点其实在于如何找到那些\textcolor{red}{\textbf{难负样本}}. 什么叫难负样本? \textit{看起来像是用户会喜欢的东西, 但实际上用户并不喜欢}. 为什么要难负样本呢? 当然是为了让模型学习到更鲁棒的区分能力, 类似于二分类中找到一个更准确的分界面.
+
+\subsubsection{随机负采样}
+最基本的负采样算法, 它的思想就是平等地对待采样池内的每一个商品, 按相等的概率进行采样. 其逻辑非常简单, 在效率上有着很大的优势. 同时也避免在采样过程中引入新的偏差, 是一个被广泛使用的采样算法. 
+
+\subsubsection{基于流行度的负采样}
+它的思想是以商品流行度作为采样权重对采样池内的商品进行带权采样, 流行度越高的商品越容易被采到. 一个容易跳过的问题是\textcolor{red}{\textbf{流行度的定义}}, 一种常见的定义方式该商品的历史交互次数, 即商品被消费次数越多, 其流行度就越高. 这种算法相比于随机负采样, 就是将均匀分布替换成一个基于流行度的采样分布, 只需要在采样前计算出每个商品的流行度作为采样分布, 然后就按照这个分布进行采样即可, 在开销上没有增加特别多.
+ 
+相比于随机负采样, 按照流行度采样的目的是为了提高所采负例的信息量, 提高采样质量. 例如一个非常流行的商品, 却出现在某个用户的未交互商品集中, 那么这个商品就很大概率是用户不喜欢的商品, 那么通过这个负例就可以很好的学习到用户的喜好; 相反, 一个大家都不喜欢的商品, 将它作为负例进行学习, 其实能够带给模型的信息量就很少了, 很难学习到该用户的个性化特征. 而且, 热门物品出现在正样本中的次数也会主导模型的判断, 因此基于热度采样也能对热门样本进行打压.
+
+该方法也有一定的局限性. 首先, 因为采样分布是提前计算好的, 在模型训练过程中, 采样分布不会变化. 因此那些在训练初期能够提高更高信息量的负例, 在经过多次训练后, 其带来信息量可能会有所下降. 其次, 流行度的引入也可能会引入新的偏差, 因为流行度的计算是全局的, 而在用户中, 不同用户类别之间的兴趣可能是有差异的, 如果所给数据中的用户类别分布不均匀, 就可能导致流行度的定义出现偏差. 因此, 负采样的流行度也可以是针对每个用户而言的, 相当于为每个用户进行负采样.
+
+\subsubsection{曝光未点击作为负样本}
+这种通常是针对 top $K$ 推荐而言的, 即给用户一个 $K$ 个物品的有序列表, 那些没有被点击的物品作为负样本. 最终的 top $K$ 一般都是经过排序模型筛选过后的物品, 模型认为用户会喜欢的物品, 因此如果用户反而没有点击, 则说明模型预测的出问题了, 还是很符合难负样本的定义的. 
+
+\subsubsection{inbatch 采样}
+训模型时, 我们通常是一个 batch 一个 batch 地喂数据的, 因此对于 batch 内某个用户的负样本, 可以选择 batch 内其他用户的正样本作为负样本. 但是这样会有一个问题: 对于长尾物品不利, 会造成选择偏差.
+
+\subsubsection{基于模型进行负采样}
+这种方法的思路就是由模型来决定哪些是负样本. 在模型训练过程中, 利用上一轮的模型对样本进行评分, 选择非正样本中评分较高的作为负样本. 或者, 根据评分来调整采样时的权重. 这个方法也是比较常用的, 但可能会出现\textcolor{red}{\textbf{伪负样本}}的问题: \textbf{未交互与不喜欢并不等价}.
+
+\subsubsection{基于向量}
+其实, 从直觉上来看, 难负样本是那些像正样本的负样本. 那么如果定义了样本之间的距离就可以直接更具这个来选择负样本了.
+
+\subsubsection{针对场景设计规则}
+即针对业务场景, 人工设计负样本采样的规则. 例如在视频推荐中, 可以选择同类型下用户未点击的, 或者点击但是停留时长很短的.
